--- a/OOTP_WINTER_240120/OOTP_WINTER_240120.vcxproj
+++ b/OOTP_WINTER_240120/OOTP_WINTER_240120.vcxproj
@@ -127,7 +127,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="OOTP_PREV.cpp" />
     <ClCompile Include="OOTP_WINTER.cpp" />
+    <ClCompile Include="team_select.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
