--- a/OOTP_WINTER_240120/OOTP_WINTER_240120.vcxproj.filters
+++ b/OOTP_WINTER_240120/OOTP_WINTER_240120.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="team_select.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="OOTP_24.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
